--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ body {
   background: linear-gradient(#2b1055, #7597de);
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 h1 {
@@ -98,10 +99,6 @@ margin-bottom: 50px;
   position: absolute;
   top: 0;
   right: 0;
-}
-
-img#moon {
-  mix-blend-mode: screen;
 }
 
 .text-container div {
@@ -173,7 +170,7 @@ span {
 #credits {
   position:absolute;
   bottom: 0;
-  opacity: 30%;
+  opacity: 0%;
   transform: translateY(100%);
   text-align: center;
   line-height: 2rem;
